--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=iceochile
+APP_NAME="Neural Data Chile"
 APP_ENV=local
 APP_KEY=base64:0ROq0gBEDA3/MsQu0r/sCZDS25FpgWxmJJLU3ZjcgY8=
 APP_DEBUG=true
